examples/good/03-VarsAssign.tms
void main() {

  string a = "some string";
  string b = a;
  int c = 10;
  int d = 10 + c;
  boolean e = true;
  boolean f = false && e;

  printString(a);
  printString(b);
  printInt(c);
  printInt(d);
  printBool(e);
  printBool(f);

  printBool(true);

  return;
}