examples/bad/05-NotBoolCondition.tms
void main() {
  if (2+2) {
    printString("Not bool");
  }
  return;    
}